Fix: Avoid the home page black background when user toggle the dark mode

--- a/src/components/homepage/WhyHeighliner/index.module.scss
+++ b/src/components/homepage/WhyHeighliner/index.module.scss
@@ -2,6 +2,7 @@
   width: 100%;
   background-color: #000;
   padding-top: 116px;
+  padding-bottom: 71px;
 }
 
 .title {
